--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,16 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  margin: 0;
-}
+html,
 body {
-  padding: 0.75rem 1rem 1rem 1rem;
   margin: 0;
-  overflow: hidden;
-  height: 100%;
 }
-
 .sd {
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
