--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,8 +10,15 @@ body {
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
-.sd_b:hover {
-  box-shadow: 0px 1px 0px 0px rgba(0, 0, 255, 2);
+.post-card {
+  height: auto;
+  padding: 5px;
+  transition: all 0.4s ease-in-out;
+}
+
+.post-card:hover {
+  box-shadow: 0px 5px 10px -3px rgba(0, 0, 0, 0.3);
+  transform: translateY(-10px);
 }
 
 .line_clamp {
