--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,3 +35,25 @@ body {
 .transition {
   box-shadow: 0.25s ease-in 0s, transform 0.25s ease-in 0s;
 }
+
+.delete_post {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 450px;
+  height: 300px;
+  transform: translate(-50%, -50%);
+}
+
+.delete_opacity {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  animation: 0.25s ease 0s 1;
+}
+
+.delete_sd {
+  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
