github markdown css add

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,13 @@ body {
   height: 100%;
   width: 100%;
 }
+.markdown-body {
+  box-sizing: border-box;
+  min-width: 200px;
+  max-width: 980px;
+  margin: 0 auto;
+  padding: 45px;
+}
 
 .sd {
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
