--- a/lib/form.ejs
+++ b/lib/form.ejs
@@ -2,9 +2,9 @@
   <body>
     <div style="font-family: Arial, Helvetica, sans-serif; width: 500px; margin: 0 auto; text-align: center; border: 1px solid #ccc; padding: 20px;">
       <h1 style="font-size: 24px;">회원가입 인증번호 안내<h1>
-      <h1 style="font-size: 16px; margin: 0;"><span style="font-weight: bold"><%= name %></span>님 안녕하세요.</p>
-      <h1 style="font-size: 16px; margin: 0;">아래의 인증번호를 입력하여 인증을 완료해주세요.</p>
-      <div style="color: #0EA5E9; display: inline-block; border: 1px solid #0EA5E9; margin-top: 30px; padding: 10px 40px; font-weight: bold; font-size: 16px;"><%= randomDigits %></div>
+      <p style="font-weight: normal; font-size: 16px; margin: 0;"><span style="font-weight: bold"><%= name %></span>님 안녕하세요.</p>
+      <p style="font-weight: normal; font-size: 16px; margin: 0;">아래의 인증번호를 입력하여 인증을 완료해주세요.</p>
+      <span style="color: #0EA5E9; display: inline-block; border: 1px solid #0EA5E9; margin-top: 30px; padding: 10px 40px; font-weight: bold; font-size: 16px;"><%= randomDigits %></span>
     </div>
   </body>
 </html>
